--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,17 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.0.1",
-    "axios": "^1.6.5",
+    "@reduxjs/toolkit": "^2.1.0",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
-    "date-fns": "^3.2.0",
+    "date-fns": "^3.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.21.2",
-    "react-toastify": "^10.0.3",
-    "redux": "^5.0.1"
+    "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.21.3",
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
